Add new images and implement Google Sheets integration for subscriber management, also added to the features section

--- a/style.css
+++ b/style.css
@@ -324,6 +324,11 @@ nav ul li a:hover {
     font-size: 1rem;
     opacity: 0.9;
   }
+.button-wrapper{
+  display: flex;
+  justify-content: center;
+}
+
   .mission {
     padding: 80px 20px;
     background-color: black; 
