--- a/style.css
+++ b/style.css
@@ -9,47 +9,6 @@ body {
   padding: 0;
 }
 
-.loader {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: black; 
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  z-index: 1000;
-  transition: opacity 0.5s ease;
-}
-
-.bionix-loader {
-  display: flex;
-  gap: 0.5rem;
-  font-family: 'Orbitron', sans-serif; 
-  font-size: 3rem;
-  font-weight: bold;
-  color: white; 
-}
-
-.bionix-loader span {
-  opacity: 0;
-  transform: translateY(-20px);
-  animation: letter-pop 0.6s ease forwards;
-}
-
-
-.bionix-loader span:nth-child(1) { animation-delay: 0.1s; }
-.bionix-loader span:nth-child(2) { animation-delay: 0.2s; }
-.bionix-loader span:nth-child(3) { animation-delay: 0.3s; }
-.bionix-loader span:nth-child(4) { animation-delay: 0.4s; }
-.bionix-loader span:nth-child(5) { animation-delay: 0.5s; }
-.bionix-loader span:nth-child(6) { animation-delay: 0.6s; }
-
-@keyframes letter-pop {
-  0% { opacity: 0; transform: translateY(-20px); }
-  100% { opacity: 1; transform: translateY(0); }
-}
 .scroll-indicator {
   position: fixed;
   bottom: 20px;
@@ -116,7 +75,7 @@ nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: whitesmoke;
+  background-color: white;
   padding: 20px 50px;
   position: sticky;
   top: 0;
@@ -150,8 +109,8 @@ nav ul li a {
 }
 
 nav ul li a:hover {
-  color: white;
-  background-color: black;
+  color: rgb(255, 255, 255);
+  background-color: rgb(0, 0, 0);
   border-radius: 5px;
 }
 
@@ -161,7 +120,7 @@ nav ul li a:hover {
   align-items: center;
   justify-content: space-between;
   padding: 100px 50px;
-  background-color: whitesmoke;
+  background-color: white;
 }
 
 .hero-text {
@@ -200,7 +159,7 @@ nav ul li a:hover {
 .hero-image img {
   max-width: 70%;
   height: auto;
-  animation: float 1.5s ease-in-out infinite;
+  animation: float 3s ease-in-out infinite;
 }
 
 
@@ -270,7 +229,7 @@ nav ul li a:hover {
   
   .features {
     padding: 80px 20px;
-    background-color: whitesmoke; 
+    background-color: white; 
     color: #fff;
   }
 
@@ -295,7 +254,7 @@ nav ul li a:hover {
   }
 
   .feature-card {
-    background-color: whitesmoke;
+    background-color: white;
     padding: 30px;
     border-radius: 10px;
     transition: transform 0.3s ease, background-color 0.3s ease;
@@ -432,7 +391,7 @@ nav ul li a:hover {
 
   .contact {
     padding: 80px 20px;
-    background-color: whitesmoke;
+    background-color: white;
     color: black;
     font-family: "inter";
   }
@@ -532,7 +491,7 @@ nav ul li a:hover {
   }
 
   .footer-col ul li a:hover {
-    color: whitesmoke;
+    color: white;
   }
 
   .social-icons {
